tests/compile-fail/integration_suite__integration__general__pseudo_bad_name.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: invalid pseudo-arg
   ┌─ <input>:28:15
   │
28 │         wait(@blobloblob="0f000000");
   │               ^^^^^^^^^^ not a pseudo-arg
   │
   = valid pseudo-args are: pop, mask, blob, arg0


